added filterscreen and used riverpod

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>meals</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
